--- a/learnnote/通道.md
+++ b/learnnote/通道.md
@@ -1,14 +1,14 @@
 # 关于通道的基本知识
 - 通道是go自带的、唯一可以满足并发安全的数据类型
 - 声明并初始化一个通道的时候需要用到内置make函数
-- 一个通道简单类似一个先进先出的队列、通道中的数据都是验个的按照发送顺序排列的
+- 一个通道简单类似一个先进先出的队列、通道中的数据都是严格地按照发送顺序排列的
 
 # 关于通道的基本操作
-- 对于同一个通道，发送操作之间是互斥的接受操作之间也是互斥的
+- 对于同一个通道，发送操作之间是互斥的、接收操作之间也是互斥的
 - 发送操作、接收操作对元素的处理都是不可分割的
 - 发送操作在被完全接收之前是被阻塞的、接收操作也是如此
 - 关于发送和接收操作的都是副本文件，也就是说，发送操作是复制了一个元素副本接着放到通道中、接收操作则是复制一个通道中元素的副本出去接着从通道中删除这个元素
-- 二声哦一个通道被关闭了，我们可能会从通道接收到一个该类型的零值
+- 一旦一个通道被关闭了，我们可能会从通道接收到一个该类型的零值
 试图对一个已经关闭的通道进行发送操作会产生panic、另外试图关闭一个已经关闭了的通道也会引发panic，通常来讲我们一定不要让接收方来关闭通道，应该让发送方操作
 
 # 高级操作
